Avoid swimlane title overlap

--- a/client/components/swimlanes/swimlanes.styl
+++ b/client/components/swimlanes/swimlanes.styl
@@ -4,12 +4,13 @@
   display: flex;
   flex-direction: row;
   flex: 0 0 50px;
+  padding-bottom: 30px;
 
   .swimlane-header
     writing-mode: sideways-lr;
     font-size: 14px;
     line-height: 50px;
-    margin: 0;
+    margin-top: 50px;
     font-weight: bold;
     min-height: 9px;
     min-width: 30px;
